<resources>
    <string name="app_name">Messenger Académico</string>
    <string name="action_settings">Mi Perfil</string>
    <string name="action_refresh_contacts">Actualizar Contactos</string>
    <string name="chat_send_image">Enviar Imagen</string>

    <string name="verification.button.next">Sig.</string>
    <string name="verification.message.costwarning">Puede que tu operador te cobre por el SMS </string>
    <string name="verification.message.smssend">Messenger Académico te enviará un SMS para verificar tu número de teléfono. Introduce tu código de país y número de teléfono:</string>
    <string name="verification.title">Verifica tu número</string>
    <string name="verification.title.verificating">Verificar %s</string>
    <string name="verification.message.verificating">Esperando para detectar automáticamente el SMS enviado al &lt;b>%s&lt;/b>. &lt;a href="https://www.facebook.com/jairsteve.camposvega">¿Número equivocado?&lt;/a></string>
    <string name="verification.dialog.message.confirm">Vamos a verificar el número de teléfono \n\n%s \n\n¿Es correcto o quieres modificarlo?</string>

    <string name="verification.error.invalid.phonenumber">El número introducido no es válido.</string>
    <string name="verification.error.code.invalid">El código introducido no es válido</string>
    <string name="verification.error.failed">Verificación fallida</string>

    <string name="verification.hint.code">Código</string>
    <string name="verification.button.sendsmsagain">Enviar SMS de nuevo</string>
    <string name="verification.button.call">Llámame</string>
    <string name="verification.button.retro">Cambiar Número</string>


    <string name="loadprofile.title">Info. de perfil</string>
    <string name="loadprofile.subtitle">Por favor, introduce tu name y una foto (opcional)</string>
    <string name="importdata.title">¡Bienvenido %s!</string>
    <string name="importdata.subtitle">Institución: %s</string>
    <string name="importdata.message.main">Messenger Académico permite a alumnos, profesores y padres comunicarse.</string>

    <string name="importdata.title.import">Importar Contactos</string>
    <string name="importdata.subtitle.import">%1$d Institucion(es) Y %2$d Contactos encontrados</string>
    <string name="importdata.content.import">Importar tus mensajes a messenger académico. Así podrás intercambiar mensajes, imágenes y videos rápidamente.</string>
    <string name="importdata.button.import">Importar</string>


    <string name="importdata.button.go">Importar Contactos</string>
    <string name="importdata.message.ready">Listo</string>
    <string name="importdata.notice.success">Importado correctamente</string>
    <string name="importdata.notice.error">Lo sentimos hubo un error al importar, inténtelo nuevamente.</string>

    <string name="importdata.message.contacts.imported">%d Contactos Importados</string>


    <string name="title_activity_test">TestActivity</string>
    <string name="fragment_chatlist_title">Chats</string>
    <string name="fragment_contacts_title">Contactos</string>

    <string name="contactlist.message.status.default">Hola, estoy usando Messenger Académico.</string>
    <string name="global_notice_online">En línea</string>
    <string name="chat_info_connection_lastseen">últ. vez hoy a las %s</string>
    <string name="loadprofile.button.next">Sig.</string>
    <string name="menu_chat_item_attach_file_title">Attach File</string>
    <string name="menu_chat_item_call_title">Call</string>
    <string name="action_view_contact">Ver contacto</string>
    <string name="action_view_files">Archivos</string>
    <string name="action_mute">Silenciar</string>
    <string name="action_change_background">Fondo</string>
    <string name="action_more">Más</string>
    <string name="action_shorcut">Crear acceso directo</string>
    <string name="action_send_email">Enviar chat por email</string>
    <string name="action_delete">Vaciar</string>
    <string name="action_block">Bloquear</string>


    <string name="global_action_writing">escribiendo…</string>
    <string name="global_action_user_writing">%s está escribiendo…</string>
    <string name="global.img.description">Image Description</string>

    <string name="load.profile.user">android.resource://com.consultoraestrategia.messengeracademico/drawable/users</string>

    <string name="notification.summary.newmessages">%d nuevo(s) mensaje(s)</string>
    <string name="load_profile_error">Error actualizando el perfil.</string>
    <string name="user_photo_upload_sucess">Foto de Perfil Actualizada.</string>
    <string name="load_profile_error_fields">Revisar los campos</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="txt_global_photo">*Foto*</string>
    <string name="txt_global_audio">*Audio*</string>
    <string name="txt_global_video">*Video*</string>

    <!--New Items-->

    <string name="menu_options_profile_edit">Editar</string>
    <string name="menu_options_profile_view">Ver en lista de contactos</string>
    <string name="last_connection">últ. vez hace %1$d %2$s</string>
    <string name="last_message_time">Hace %1$d %2$s</string>
    <string name="time_seconds">segundos</string>
    <string name="time_minutes">minutos</string>
    <string name="time_hours">horas</string>
    <string name="time_days">días</string>

    <string name="global_time_today">Hoy</string>
    <string name="global_time_yersterday">Ayer</string>

    <string name="chat.message.academic.information">Rol: %1$s, Nivel %2$s \nAño: %3$s, Curso: %4$s, Sección %5$s.</string>
    <string name="chat.message.rol.information">Rol: %1$s.</string>

    <string name="profile.notice">"Esto no es un name de usuario ni un pin. \n""Este name será visible para tus contactos de Messenger Academico."</string>
    <string name="profile.title">Perfil</string>

    <!--Google Play Services -->
    <string name="google.play.services.title">Google Play Services</string>
    <string name="google.play.services.message">Necesita actualizar los paquetes de Google Play Services para continuar</string>
    <!--Play Store -->
    <string name="marker.google.services">market://details?id=com.google.android.gms</string>
    <string name="playstore.google.services">https://play.google.com/store/apps/details?id=com.google.android.gms</string>

    <string name="unknown_response">Respuesta desconocida</string>
    <string name="sign_in_sucess">Inicio de Sesión exitoso.</string>
    <string name="sign_in_cancelled">Verificación Cancelada</string>
    <string name="no_internet_connection">Sin conexión a internet</string>
    <string name="unknown_error">Error Desconocido</string>
    <string name="unknown_sign_in_response">Respuesta de Inicio de Sesión Desconocida</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="officialmessage_state_waiting">Esperando Confirmación</string>
    <string name="officialmessage_state_confirm">Confirmado</string>
    <string name="officialmessage_state_deny">Denegado</string>
    <string name="activity_importdata_error">Error Importando Contactos</string>
    <string name="activity_importdata_success">Contactos Actualizados Correctamente</string>
    <string name="error_uploading_image">Error Subiendo Imagen</string>
    <string name="error_sending_message">Error enviando el mensaje</string>
    <string name="dialog_title_importante_message">Mensaje Importante</string>
    <string name="global_source_mobile">MÓVIL</string>
    <string name="global_user_not_verificated">Usuario Regular</string>
    <string name="global_rol_verified">(%s)</string>
    <string name="global_hint_default">Introducir texto aquí</string>
    <string name="global_edit_name">Escribe tu name</string>
    <string name="error_updating_displayname">Error actualizando name de usuario</string>
    <string name="global_message_success">Listo</string>
    <string name="global_message_error">Error</string>
    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_message_delete">Eliminar</string>
    <string name="global_message_copy">Copiar</string>
    <string name="activity_chat_messages_copied">%d mensaje(s) copiado(s)</string>
    <string name="error_removing_message">Error eliminando mensaje</string>
    <string name="activity_chat_messages_deleted">Mensajes eliminados</string>
    <string name="error_removing_chat">Error eliminando chat</string>
    <string name="global_user_info">Info y número de teléfono</string>
    <string name="global_error_not_implemented">No implementado aún</string>
    <string name="title_activity_group">Integrantes</string>
    <string name="global_mssg_admin">Admin. del grupo</string>
    <string name="title_activity_import_group">Importar Grupos de CRME</string>
    <string name="action_import_crme_gruops">Importar Grupos del CRMEducaivo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_grouplist_title">Grupos</string>
    <string name="group_mssg_count_members">%d Integrantes</string>
    <string name="global_mssg_refresh">Actualizar</string>
    <string name="global_action_search">Buscar</string>
    <string name="menu_serverlist">Servidores</string>
    <string name="dialog_title_serverlist">Servidores</string>
    <string name="error_server_url_saving">Error guardando la dirección del servidor</string>
    <string name="global_server_custom">Url personalizada</string>
    <string name="login_dialog_add_server">Servidor Url</string>
    <string name="txt_global_rubro">*Evaluación*</string>
    <string name="global_btn_text_finalizar">Finalizar</string>
    <string name="global_btn_text_back">Atrás</string>
    <string name="global_btn_text_next">Siguiente</string>
    <string name="global_btn_text_close">Cerrar</string>
    <string name="fragment_eval_rubrica_bidimiensional_hint_puntos">Puntos</string>
    <string name="fragment_eval_rubrica_bidimiensional_hint_nota">Nota</string>
    <string name="fragment_eval_rubrica_bidimiensional_hint_desempenio">Desempeño</string>
    <string name="fragment_eval_rubrica_bidimiensional_hint_logro">Logro</string>


</resources>
