<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.consultoraestrategia.messengeracademico.main.ui.MainActivity">
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_refresh_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_crme_gruops"
        android:orderInCategory="100"
        android:title="@string/action_import_crme_gruops"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_servers"
        android:orderInCategory="100"
        android:title="@string/menu_serverlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="Test"
        app:showAsAction="never" />-->


</menu>
