<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnFinalizar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/global_btn_text_finalizar"
        android:textColor="@color/md_blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnRetroceder" />

    <Button
        android:id="@+id/btnRetroceder"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/global_btn_text_back"
        android:textColor="@color/md_blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnFinalizar"
        app:layout_constraintRight_toLeftOf="@+id/btnAvanzar" />

    <Button
        android:id="@+id/btnAvanzar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/md_blue_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/global_btn_text_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnRetroceder"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>