<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <TextView
        android:id="@+id/text_alumn_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_alumn_profile"
        app:layout_constraintTop_toTopOf="@+id/img_alumn_profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_alumn_profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/badge_circle"
        android:layout_marginLeft="8dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_puntos"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_logro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/til_nota"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/til_logro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_puntos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:focusable="false"
            android:hint="@string/fragment_eval_rubrica_bidimiensional_hint_puntos"
            android:maxLines="1"
            android:text="" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nota"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_logro"
        app:layout_constraintEnd_toStartOf="@+id/til_desempenio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_puntos"
        app:layout_constraintTop_toTopOf="@+id/til_logro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_nota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:focusable="false"
            android:hint="@string/fragment_eval_rubrica_bidimiensional_hint_nota"
            android:maxLines="1"
            android:text="" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_desempenio"
        android:layout_width="64dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_logro"
        app:layout_constraintEnd_toStartOf="@+id/til_logro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_nota"
        app:layout_constraintTop_toTopOf="@+id/til_logro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_desempenio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:focusable="false"
            android:hint="@string/fragment_eval_rubrica_bidimiensional_hint_desempenio"
            android:maxLines="1"
            android:text="" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_logro"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_desempenio"
        app:layout_constraintTop_toBottomOf="@+id/img_alumn_profile">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_logro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:hint="@string/fragment_eval_rubrica_bidimiensional_hint_logro" />
    </android.support.design.widget.TextInputLayout>

    <com.evrencoskun.tableview.TableView
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="100dp"
        app:column_header_height="@dimen/table_header_width_eval_session"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_logro"
        app:row_header_width="@dimen/table_firstheader_width_eval_session"
        app:shadow_color="@color/md_grey_50"
        app:unselected_color="@color/white" />

    <TextView
        android:id="@+id/txt_contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="1/1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/text_alumn_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_alumn_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_alumn_name" />


</android.support.constraint.ConstraintLayout>